packages/beynac/src/test-utils/source/__fixtures__/errors/bad-barrel-file-reexport/index.ts
// Good: no rename
// Bad: renames export
export { GoodExport, Something as RenamedThing } from "./source";
